tests/ui/lint/snapshots/match_same_arms_literals.snap
---
source: tests/ui/lint/mod.rs
---
  ● Duplicate match arm
   ╭─[test.lis:6:5]
 5 │     1 => 20,
 6 │     2 => 10,
   ·     ┬
   ·     ╰── same body as an earlier arm
 7 │     _ => 0,
   ╰────
  help: Merge this arm into the `0` arm with `|` · code: [lint.match_same_arms]
