tests/ui/lint/snapshots/min_max_equal_bounds.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Clamp always returns a constant
   ╭─[test.lis:4:11]
 3 │   let x: int = 3
 4 │   let _ = min(max(x, 5), 5)
   ·           ────────┬────────
   ·                   ╰── always `5`
 5 │ }
   ╰────
  help: This clamp always returns `5` regardless of its variable operand. Did you swap `min` and `max`? · code: [infer.min_max]
