tests/ui/lint/snapshots/min_max_literal_on_left.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Clamp always returns a constant
   ╭─[test.lis:4:11]
 3 │   let x: int = 3
 4 │   let _ = min(1, max(5, x))
   ·           ────────┬────────
   ·                   ╰── always `1`
 5 │ }
   ╰────
  help: This clamp always returns `1` regardless of its variable operand. Did you swap `min` and `max`? · code: [infer.min_max]
