tests/ui/lint/snapshots/min_max_max_over_min.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Clamp always returns a constant
   ╭─[test.lis:4:11]
 3 │   let x: int = 3
 4 │   let _ = max(min(x, 1), 5)
   ·           ────────┬────────
   ·                   ╰── always `5`
 5 │ }
   ╰────
  help: This clamp always returns `5` regardless of its variable operand. Did you swap `min` and `max`? · code: [infer.min_max]
